fix(Tooltip): visual changes to spacing, text and shadow (#1267)

--- a/src/patternfly/components/Tooltip/tooltip.scss
+++ b/src/patternfly/components/Tooltip/tooltip.scss
@@ -3,15 +3,15 @@
 .pf-c-tooltip {
   // Component variables
   --pf-c-tooltip--MaxWidth: #{pf-size-prem(200px)};
-  --pf-c-tooltip--BoxShadow: var(--pf-global--BoxShadow--md);
 
   // Content variables
   --pf-c-tooltip__content--PaddingTop: var(--pf-global--spacer--md);
-  --pf-c-tooltip__content--PaddingRight: var(--pf-global--spacer--md);
+  --pf-c-tooltip__content--PaddingRight: var(--pf-global--spacer--lg);
   --pf-c-tooltip__content--PaddingBottom: var(--pf-global--spacer--md);
-  --pf-c-tooltip__content--PaddingLeft: var(--pf-global--spacer--md);
+  --pf-c-tooltip__content--PaddingLeft: var(--pf-global--spacer--lg);
   --pf-c-tooltip__content--Color: var(--pf-global--Color--light-100);
   --pf-c-tooltip__content--BackgroundColor: var(--pf-global--BackgroundColor--dark-200);
+  --pf-c-tooltip__content--FontSize: var(--pf-global--FontSize--sm);
 
   // Arrow variables
   --pf-c-tooltip__arrow--Width: var(--pf-global--arrow--width);
@@ -23,7 +23,6 @@
 
   position: relative;
   max-width: var(--pf-c-tooltip--MaxWidth);
-  box-shadow: var(--pf-c-tooltip--BoxShadow);
 
   &.pf-m-top {
     .pf-c-tooltip__arrow {
@@ -61,6 +60,7 @@
 .pf-c-tooltip__content {
   position: relative;
   padding: var(--pf-c-tooltip__content--PaddingTop) var(--pf-c-tooltip__content--PaddingRight) var(--pf-c-tooltip__content--PaddingBottom) var(--pf-c-tooltip__content--PaddingLeft);
+  font-size: var(--pf-c-tooltip__content--FontSize);
   color: var(--pf-c-tooltip__content--Color);
   text-align: center;
   background-color: var(--pf-c-tooltip__content--BackgroundColor);
@@ -72,5 +72,4 @@
   height: var(--pf-c-tooltip__arrow--Height);
   pointer-events: none;
   background-color: var(--pf-c-tooltip__content--BackgroundColor);
-  box-shadow: var(--pf-c-tooltip--BoxShadow);
 }
